# studing

./: .gitmodules  README.md  file.txt  lab2_z1.c  lab2_z3.c  mergesort.py
C_programming_1_semestr!/LAB11/: task2.c
C_programming_1_semestr!/LAB2/: a.out
C_programming_1_semestr!/LAB3/: a.out  lab3_alg6.c  lab3_alg9.c
C_programming_1_semestr!/LAB5/: lab5_tsk6.c
C_programming_1_semestr!/LAB6/: lab6_tsk_for_5.c
C_programming_1_semestr!/LAB8/: a.out  lab8.c
C_programming_2_semestr!/lab0/: task1  task1.c
C_programming_2_semestr!/lab1/: task1  task1.c
C_programming_2_semestr!/lab2_git/: lab2_git.docx  sort.c  ~$b2_git.docx
C_programming_2_semestr!/lab3/: fi.txt  file.txt  fileггггггггггг.txt  task  task.c
C_programming_2_semestr!/lab5/: a.out  lab  lab5.c  lab51.c
C_programming_2_semestr!/lab6/: CMakeLists.txt  dynamic_exe  main.c  static_exe  student.h  student_search.c  student_utils.c
C_programming_2_semestr!/lab7/: README.md  performance_results.tsv  sleep  sleepsort.c  task  task.c  task11  task4  task4.c  taskm  taskm.c  thread1  visualize.gp
C_programming_2_semestr!/lab8/: calculator.c  calculator.h  calculator_check3  calculator_check3.c  calculator_check4  calculator_check4.c  calculator_check5  calculator_check5.c
LAB10/: lab10  obrazy.c  triangles.h
LAB11/:  task1.c  task0.c  task3.c
LAB12/task1/: CMakeLists.txt
LAB2/: lab2 z1.c  lab2_z2.c
LAB3/: lab3_alg10.c  lab3_alg7.c  lab3_alg8.c
LAB4/: lab4_5_1.c
LAB5/: lab5_tsk7.c
LAB6/: lab6_tsk_for_4.c
LAB7/: lab7_tsk_for_5.c
LAB8/: lab8_star.c
OOP/lab0/: a.out  task.c
OOP/lab1/: a.out  task.c  taskz.c
OOP/lab2/: task.c
PyProjects/RGZ/: main.py
lab10/: Makefile  Makefile.save  a.out  lab10.c  make2
lab11/: task2.c
lab9/: Volevach.c  a.out
(+108 files in other folders)
